--- a/index.html
+++ b/index.html
@@ -11,8 +11,51 @@
     <title>Travelgram | Perfil de viagens</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-        Quod, animi. Totam laboriosam, laborum atque molestiae, aut, exercitationem cumque distinctio aliquam reprehenderit excepturi fugit non et? 
-        Veniam corrupti recusandae id dicta?</p>
+    <div class="bg-surface-color">
+    <nav class="container">
+        <a href="#" id="logo">
+            <img src="assets/Logo.svg" alt="Logomarca">
+        </a>
+
+        <ul id="primary-menu">
+            <li>
+                <a href="#"><img src="/assets/icons/MagnifyingGlass.svg" alt="ícone de lupa"></a>
+            </li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#">Minhas viagens</a></li>
+            <li><a href="#">
+                <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+            </a></li>
+        </ul>
+    </nav>
+
+    <header>
+        <div class="container">
+            <div id="profile">
+                <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+                <div>
+                    <h1>Isabela Torres</h1>
+                    <p>Amante de viagens, cultura e gastronomia. 🌍✈️ <br> 
+                        Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+                </div>
+            </div>
+
+            <ul id="info">
+                <li>
+                    <img src="assets/icons/MapPin.svg" alt="Icone de mapa">
+                    <span>São Paulo, Brazil</span>
+                </li>
+                <li>
+                    <img src="assets/icons/AirplaneTilt.svg" alt="Icone de avião">
+                    <span>37 países</span>
+                </li>
+                <li>
+                    <img src="assets/icons/Image.svg" alt="Icone de imagem">
+                    <span>240 fotos</span>
+                </li>
+            </ul>
+        </div>
+    </header>
+</div>
 </body>
 </html>
